--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "robloxLsp.diagnostics.globals": [
-        "getnilinstances"
+        "getnilinstances",
+        "gethiddenproperty"
     ]
 }
