stdout bugs fix & code editor newline fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "robloxLsp.diagnostics.globals": [
         "getnilinstances",
-        "gethiddenproperty"
+        "gethiddenproperty",
+        "getrenv",
+        "getrenv"
     ]
 }
