first configs implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "getnilinstances",
         "gethiddenproperty",
         "getrenv",
-        "getrenv"
+        "getrenv",
+        "getgenv"
     ]
 }
